@@ -3,22 +3,57 @@ package ca.teamdman.sfml.ast;
 import ca.teamdman.sfm.common.program.InputResourceTracker;
 import ca.teamdman.sfm.common.program.OutputResourceTracker;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public record ResourceLimits(List<ResourceLimit<?, ?, ?>> resourceLimits) implements ASTNode {
+public record ResourceLimits(
+        List<? extends ResourceLimit<?, ?, ?>> resourceLimits,
+        ResourceIdSet exclusions
+) implements ASTNode {
     public List<InputResourceTracker<?, ?, ?>> createInputTrackers() {
-        return resourceLimits.stream().map(InputResourceTracker::new).collect(Collectors.toList());
+        List<InputResourceTracker<?, ?, ?>> rtn = new ArrayList<>();
+        resourceLimits.forEach(rl -> rl.gatherInputTrackers(rtn::add, exclusions));
+        return rtn;
     }
 
     public List<OutputResourceTracker<?, ?, ?>> createOutputTrackers() {
-        return resourceLimits.stream().map(OutputResourceTracker::new).collect(Collectors.toList());
+        List<OutputResourceTracker<?, ?, ?>> rtn = new ArrayList<>();
+        resourceLimits.forEach(rl -> rl.gatherOutputTrackers(rtn::add, exclusions));
+        return rtn;
     }
 
-    public ResourceLimits withDefaults(long quantity, long retention) {
-        return new ResourceLimits(resourceLimits
-                                          .stream()
-                                          .map(il -> il.withDefaults(quantity, retention))
-                                          .collect(Collectors.toList()));
+    public ResourceLimits withDefaults(Limit limit) {
+        return new ResourceLimits(resourceLimits.stream().map(il -> il.withDefaults(limit)).toList(), exclusions);
+    }
+
+    public ResourceLimits withExclusions(ResourceIdSet exclusions) {
+        return new ResourceLimits(resourceLimits, exclusions);
+    }
+
+    @Override
+    public String toString() {
+        String rtn = this.resourceLimits.stream()
+                .map(ResourceLimit::toString)
+                .collect(Collectors.joining(",\n"));
+        if (!exclusions.resourceIds().isEmpty()) {
+            rtn += "\nEXCEPT\n" + exclusions.resourceIds().stream()
+                    .map(ResourceIdentifier::toString)
+                    .collect(Collectors.joining(",\n"));
+        }
+        return rtn;
+    }
+
+    public String toStringPretty(Limit defaults) {
+        String rtn = resourceLimits.stream()
+                .map(rl -> rl.toStringCondensed(defaults))
+                .map(x -> resourceLimits.size() == 1 ? x : x + ",")
+                .collect(Collectors.joining("\n"));
+        if (!exclusions.resourceIds().isEmpty()) {
+            rtn += "\nEXCEPT\n" + exclusions.resourceIds().stream()
+                    .map(ResourceIdentifier::toStringCondensed)
+                    .collect(Collectors.joining(",\n"));
+        }
+        return rtn;
     }
 }
